Fixed layout issues in landing page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
 
   display: flex;
   padding-right: 2rem;
-  gap: 1rem;
+  gap: 3rem;
   height: 100vh;
 
   .nav_container {
