--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -1,9 +1,10 @@
 
 .landing_page__wrapper {
     display: flex;
-    gap: 1rem;
+    gap: 3rem;
     padding: 2rem 0;
     height: 100%;
+    width: 80%;
 
   .schedule__container {
     width: 15%;
@@ -11,23 +12,25 @@
   }
 
   .content_display__container {
-    overflow-y: auto;
-    scroll-behavior: smooth;
-      -webkit-overflow-scrolling: touch;
+    width: 80%;
+    height: 100%;
+    padding: 2rem;
+    // scroll-behavior: smooth;
+    //   -webkit-overflow-scrolling: touch;
 
-      scrollbar-color: var(--LTDR-THEME_WHITE) rgba(255, 255, 255, 0.3);
-      scrollbar-width: thin;
+    //   scrollbar-color: var(--LTDR-THEME_WHITE) rgba(255, 255, 255, 0.3);
+    //   scrollbar-width: thin;
 
-      &::-webkit-scrollbar {
-        background-color: rgba(255, 255, 255, 0.3);
-        opacity: 0.6;
-        width: 4px;
-        border-radius: 2px;
-      }
+    //   &::-webkit-scrollbar {
+    //     background-color: rgba(255, 255, 255, 0.3);
+    //     opacity: 0.6;
+    //     width: 4px;
+    //     border-radius: 2px;
+    //   }
 
-      &::-webkit-scrollbar-thumb {
-        background-color: var(--LTDR-THEME_WHITE);
-        border-radius: 2px;
-      }
+    //   &::-webkit-scrollbar-thumb {
+    //     background-color: var(--LTDR-THEME_WHITE);
+    //     border-radius: 2px;
+    //   }
   }
 }
